--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "3.1.0",
     "jade": "*",
     "connect-mongo": "*",
-    "mongodb": "1.2.13"
+    "mongodb": "1.2.13",
+    "date-utils":"*"
   }
 }
