promise实现更改为开源项目

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jade": "*",
     "connect-mongo": "*",
     "mongodb": "1.2.13",
-    "date-utils":"*"
+    "date-utils":"*",
+    "q":"*"
   }
 }
